Map border radius on Safari - fixes #6

--- a/public/src/pages/FrontPage/FrontPage.css
+++ b/public/src/pages/FrontPage/FrontPage.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 400px;
     border-radius: 9px;
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 @media only screen and (max-width: 550px) {
